fix: dark mode

--- a/TW_Tiago-Matos/output.css
+++ b/TW_Tiago-Matos/output.css
@@ -1101,24 +1101,22 @@ video {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .dark\:bg-custom-purple-200 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(217 195 255 / var(--tw-bg-opacity));
-  }
+.dark\:bg-custom-purple-200:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 195 255 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-custom-purple-300 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(191 163 255 / var(--tw-bg-opacity));
-  }
+.dark\:bg-custom-purple-300:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 163 255 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-custom-purple-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(138 93 255 / var(--tw-bg-opacity));
-  }
+.dark\:bg-custom-purple-500:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(138 93 255 / var(--tw-bg-opacity));
+}
 
-  .dark\:text-custom-purple-200 {
-    --tw-text-opacity: 1;
-    color: rgb(217 195 255 / var(--tw-text-opacity));
-  }
+.dark\:text-custom-purple-200:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(217 195 255 / var(--tw-text-opacity));
 }
